added code to complete exercise 10 from zajavka project